example.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    deployment.kubernetes.io/revision: "2"
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2020-08-25T03:12:09Z"
  generation: 2
  labels:
    app: deployment-example
    app.kubernetes.io/component: deployment-example
    app.kubernetes.io/instance: deployment-example
    app.kubernetes.io/part-of: deployment-example-app
    app.openshift.io/runtime-namespace: sonar
  name: deployment-example
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: deployment-example
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: deployment-example
        deploymentconfig: deployment-example
    spec:
      containers:
      - image: openshift/deployment-example@sha256:c505b916f7e5143a356ff961f2c21aee40fbd2cd906c1e3feeb8d5e978da284b
        imagePullPolicy: IfNotPresent
        name: deployment-example
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: deployment-example
    app.kubernetes.io/component: deployment-example
    app.kubernetes.io/instance: deployment-example
    app.kubernetes.io/name: ""
    app.kubernetes.io/part-of: deployment-example-app
    app.openshift.io/runtime: ""
    app.openshift.io/runtime-version: v1
  name: deployment-example
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: deployment-example
    weight: 100
  wildcardPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2020-08-25T03:12:09Z"
  labels:
    app: deployment-example
    app.kubernetes.io/component: deployment-example
    app.kubernetes.io/instance: deployment-example
    app.kubernetes.io/name: ""
    app.kubernetes.io/part-of: deployment-example-app
    app.openshift.io/runtime: ""
    app.openshift.io/runtime-version: v1
  name: deployment-example
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: deployment-example
    deploymentconfig: deployment-example
  sessionAffinity: None
  type: ClusterIP
